# external_jansson

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/jansson_24_cmake/: CMakeLists.txt  config.h.cmake
resources/jansson_24_cmake/android_armeabi_gcc/: jansson_config.h
resources/jansson_24_cmake/android_i386_gcc/: config.h
resources/jansson_24_cmake/windows_amd64_msvc/: config.h  jansson_config.h
resources/jansson_26_cmake/: CMakeLists.txt
resources/jansson_cmake/: CMakeLists.txt
resources/jansson_cmake/android_armeabi_gcc/: jansson_config.h
test/: CMakeLists.txt  jansson_test.cpp
